# postmortem-pilot

./: .gitignore  LICENSE  README.md  postmortem.md  pyproject.toml
.github/workflows/: ci.yml  postmortem.yml
postmortem_pilot/: __init__.py  cli.py  git_diff.py  log_scanner.py  report.py  summarizer.py
tests/: __init__.py  test_git_diff.py  test_log_scanner.py  test_summarizer.py
