[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postmortem-pilot"
version = "0.1.0"
description = "Auto-generate human-readable postmortems after every deploy 🚀"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["devops", "postmortem", "github-actions", "llm", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "gitpython>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests",
]

[project.scripts]
postmortem-pilot = "postmortem_pilot.cli:main"

[project.urls]
Homepage = "https://github.com/eya-lachhab/postmortem-pilot"
Issues = "https://github.com/eya-lachhab/postmortem-pilot/issues"

[tool.setuptools.packages.find]
include = ["postmortem_pilot*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=postmortem_pilot --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["postmortem_pilot"]
omit = ["tests/*"]